style: fixed overflowing on mobile

--- a/main/static/css/home-styles.css
+++ b/main/static/css/home-styles.css
@@ -25,6 +25,7 @@
   position: relative;
   min-width: 200px;
   color: var(--accent-color);
+  overflow-y: hidden;
 }
 
 #rotating-word {
